--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
 email: 'info@prestonpropertygroup.com'
-phone: '(404)-518-7251'
+phone: 
 contact_button_link: 'mailto:info@prestonpropertygroup.com'
